## Process this file with automake to produce Makefile.in

CLEANFILES = *~
MAINTAINERCLEANFILES = Makefile.in

man_MANS = 	ifup.8 \
		ifdown.8 \
		ifservices.5 \
		ifstatus.8 \
		ifcfg.5 \
		ifcfg-bonding.5 \
		ifcfg-bridge.5 \
		ifcfg-tunnel.5 \
		ifcfg-vlan.5 \
		ifcfg-wireless.5 \
		netconfig.8 \
		ifsysctl.5 \
		ifndp-proxy.5 \
		routes.5

doc_DATA =	COPYING Contents Network \
		README.virtualization \
		netconfig.png

EXTRA_DIST = $(doc_DATA) $(man_MANS)
